--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,10 @@ body{
     filter:brightness(50%);
     overflow-y: hidden;
     background-attachment: fixed;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     
 }
 
